fixtures/cs-rng-01/bad/class-name-auth-context-math-random.ts
export class AuthTokenFactory {
	create() {
		return Math.random().toString(36);
	}
}
